BACKEND: - Add CANCEL_TRIP functionality
